--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,7 @@ jobs:
         
       - name: docker build
         run: |
-          docker build -t z0rzi/baptiste-zorzi.com:latest -f ./Dockerfile
+          docker build -t z0rzi/baptiste-zorzi.com:latest ./
         
       - name: docker push
         run: |
