--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.50",
+    "@types/react-dom": "^16.9.8",
+    "eslint-plugin-react": "^7.21.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "yarn watch:css && react-scripts start",
@@ -36,7 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "autoprefixer": "^9.8.6",
+    "eslint": "^7.10.0",
     "postcss-cli": "^7.1.2",
     "tailwindcss": "^1.8.9"
   }
