--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "@types/react-scroll": "^1.8.0",
+    "babel-loader": "^8.1.0",
     "eslint-plugin-react": "^7.21.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "serve": "^11.3.2",
     "typescript": "^4.0.3"
   },
