--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.50",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-scroll": "^1.8.0",
-    "babel-loader": "^8.1.0",
-    "eslint-plugin-react": "^7.21.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^14.14.43",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.12",
+    "@types/react-scroll": "^1.8.2",
+    "babel-loader": "8.1.0",
+    "eslint-plugin-react": "^7.23.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1",
+    "react-scroll": "^1.8.2",
     "serve": "^11.3.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "yarn watch:css && react-app-rewired start",
@@ -45,12 +45,12 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.2",
-    "react-app-rewire-alias": "^0.1.6",
-    "react-app-rewired": "^2.1.6",
-    "tailwindcss": "^1.8.9"
+    "react-app-rewire-alias": "^0.1.9",
+    "react-app-rewired": "^2.1.8",
+    "tailwindcss": "^1.9.6"
   }
 }
